Closed Bug 656365 Opened 13 years ago Closed 13 years ago

Creating an arguments object shouldn't require a parent, only a callee

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla6

People

(Reporter: Waldo, Assigned: Waldo)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

The one is redundant with the other, so we only need callee to get the job done.
Attached patch PatchSplinter Review
Try's testing this now, and I expect it'll be golden.

http://tbpl.mozilla.org/?tree=Try&rev=5308e1f0b72a
Attachment #531755 - Flags: review?(luke)
Attachment #531755 - Flags: review?(luke) → review+
Golden?  You must be running a new version of TBPL :P
Har har.

Turns out "it" is not golden, but I highly doubt it's this patch.  I'm bisecting through the few changes it might be (all but the last five or so have previously tryservered green) in that push to figure out which is at issue.  That series of patches minus the one here still crashes, and one five or so back doesn't, so it's an intermediate patch with a bug, should be easy enough to spot.  It doesn't matter much anyway, tho, because I need so many of the other changes to land first, and it's not really worth the trouble to move the patch further up the queue to push it sooner.
Yeah, not a problem with this patch, just a wider-flung change than possible in bug 655907.
http://hg.mozilla.org/tracemonkey/rev/993f0935af4c
Status: NEW → ASSIGNED
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla6
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: