Bug 656365 - Creating an arguments object shouldn't require a parent, only a callee.  r=luke